# upload3

./: .gitignore  Dockerfile  README.md  data.db  manage.py  pyproject.toml  schemas.py
models/: __init__.py  admin.py  assignment.py  assignmetsubmission.py  course.py  exam.py  examsubmission.py  professor.py  student.py  user.py
resources/: admin.py  assignment.py  course.py  exam.py  professor.py  student.py  user.py
shiftchange/: __init__.py  settings.py
